# hubspot-workflows-toolkit

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: field-example.md  workflows-v4-reference.md
examples/: analyze_sample.py  sample_flow.json
src/hsflow/: __init__.py  analyzer.py  cli.py  client.py  crosswalk.py  mermaid.py  models.py
tests/: test_analyzer.py  test_cli.py  test_client.py  test_crosswalk.py  test_mermaid.py  test_models.py
