[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsflow"
version = "0.1.0"
description = "A small Python client and static analyzer for the HubSpot Workflows (Automation) v4 API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jerusha Gray" }]
keywords = ["hubspot", "workflows", "automation", "marketing-ops", "api-client", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
hsflow = "hsflow.cli:main"

[project.urls]
Homepage = "https://github.com/JerushaGray/hubspot-workflows-toolkit"
Issues = "https://github.com/JerushaGray/hubspot-workflows-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hsflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
